<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/base_scores">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:contentDescription="@string/scores_headline_content_description" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/widget_headline1"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:fontFamily="sans-serif-light"/>

            <ImageView
                android:id="@+id/widgetImgLauncher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_launcher"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/launcher_content_description"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/widget_headline2"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:fontFamily="sans-serif-black" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/widget_list_scores"
            android:contentDescription="@string/list_content_description"  />

    </LinearLayout>

</FrameLayout>