<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/base_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/container_rounded_bg"
    android:elevation="4dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/home_name_content_desc"
                android:fontFamily="sans-serif-light"
                android:textDirection="anyRtl"
                android:gravity="center"
                android:text="@string/test_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/white"
                android:textSize="@dimen/TeamNames" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/score_textview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/score_content_desc"
                android:fontFamily="sans-serif-black"
                android:textDirection="anyRtl"
                android:gravity="center"
                android:text="@string/test_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/data_textview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/data_content_desc"
                android:textDirection="anyRtl"
                android:gravity="center"
                android:text="@string/test_text"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/away_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/away_name_content_desc"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/test_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/white"
                android:textSize="@dimen/TeamNames" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/details_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></FrameLayout>
</LinearLayout>


